--- a/lessons/02_bag_of_words.ipynb
+++ b/lessons/02_bag_of_words.ipynb
@@ -9,6 +9,12 @@
     "\n",
     "* * * \n",
     "\n",
+    "#### GRUPO 4 - INTEGRANTES\n",
+    "- CARLOS ALEXANDER CHICAIZA PUEDMAG\n",
+    "- JESSICA VIVIANA LLUMIGUANO CHELA\n",
+    "- EMILIO ISRAEL MAYORGA CAMPOVERDE\n",
+    "- JUAN FRANCISCO VIZUETE VALLEJO\n",
+    "* * * \n",
     "<div class=\"alert alert-success\">  \n",
     "    \n",
     "### Objetivos de aprendizaje\n",
