--- a/lessons/02_bag_of_words.ipynb
+++ b/lessons/02_bag_of_words.ipynb
@@ -549,7 +549,7 @@
    "id": "7cb6b039-53e7-4afe-a9e0-b3522c12b2d7",
    "metadata": {},
    "source": [
-    "¡Veamos algunos tuits primero!"
+    "¡Veamos algunos tweets primero!"
    ]
   },
   {
@@ -582,7 +582,7 @@
    "id": "0d6746f8-b29c-40d4-bef6-b4afd4cd6cc1",
    "metadata": {},
    "source": [
-    "Ya podemos ver que algunos de estos tuits contienen un sentimiento negativo. ¿Cómo podemos saber que esto es así?\n",
+    "Ya podemos ver que algunos de estos tweets contienen un sentimiento negativo. ¿Cómo podemos saber que esto es así?\n",
     "\n",
     "A continuación, veamos la distribución de las etiquetas de sentimiento en este conjunto de datos."
    ]
@@ -605,7 +605,7 @@
     }
    ],
    "source": [
-    "# Aquí vemos el código para hacer un gráfico de barras que muestre la cantidad de tuits por sentimiento:\n",
+    "# Aquí vemos el código para hacer un gráfico de barras que muestre la cantidad de tweets por sentimiento:\n",
     "sns.countplot(data=tweets,\n",
     "              x='airline_sentiment', \n",
     "              color='cornflowerblue',\n",
@@ -617,14 +617,14 @@
    "id": "eab45abf-adf4-4f5e-ae09-75f6c4fd50d1",
    "metadata": {},
    "source": [
-    "Parece que la mayoría de los tuits en este conjunto de datos expresan sentimiento negativo!\n",
+    "Parece que la mayoría de los tweets en este conjunto de datos expresan sentimiento negativo!\n",
     "\n",
     "Ahora, veamos a qué tuits son los más retuiteados:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "428ddde7-af73-4eb6-92c9-041a1791ca59",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
     }
    ],
    "source": [
-    "# Aquí vemos el código para obtener la media del número de retuits para cada sentimiento:\n",
+    "# Aquí vemos el código para obtener la media del número de retweets para cada sentimiento:\n",
     "tweets.groupby('airline_sentiment')['retweet_count'].mean()"
    ]
   },
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "12aa9f2d-d655-494a-bb72-08ad973518f3",
    "metadata": {},
    "outputs": [
@@ -745,7 +745,7 @@
     }
    ],
    "source": [
-    "# Aquí vemos el código para obtener la proporción de tuits negativos por aerolínea:\n",
+    "# Aquí vemos el código para obtener la proporción de tweets negativos por aerolínea:\n",
     "proportions = tweets.groupby(['airline', 'airline_sentiment']).size() / tweets.groupby('airline').size()\n",
     "proportions.unstack().sort_values('negative', ascending=False)"
    ]
@@ -3032,33 +3032,45 @@
    "id": "163dcecd-dc8c-43a9-952d-5bc84a307b07",
    "metadata": {},
    "source": [
-    "## 🥊 Challenge 3: Words with Highest Mean TF-IDF scores\n",
+    "## 🥊 Desafío 3: Palabras con las puntuaciones más altas de TF-IDF promedio\n",
     "\n",
-    "We have obtained tf-idf values for each term in each document. But what do these values tell us about the sentiments of tweets? Are there any words that are  particularly informative for positive/negative tweets? \n",
+    "Hemos obtenido los valores de tf-idf para cada término en cada documento. Pero, ¿qué nos dicen estos valores sobre los sentimientos de los tweets? ¿Hay algunas palabras que sean particularmente informativas para los tweets positivos/negativos?\n",
     "\n",
-    "To explore this, let's gather the indices of all positive/negative tweets and calculate the mean tf-idf scores of words appear in each category. \n",
+    "Para explorar esto, vamos a reunir los índices de todos los tweets positivos/negativos y calcular las puntuaciones promedio de tf-idf de las palabras que aparecen en cada categoría.\n",
     "\n",
-    "We've provided the following starter code to guide you:\n",
-    "- Subset the `tweets` dataframe according to the `airline_sentiment` label and retrieve the index of each subset (`.index`). Assign the index to `positive_index` or `negative_index`.\n",
-    "- For each subset:\n",
-    "    - Retrieve the td-idf representation \n",
-    "    - Take the mean tf-idf values across the subset using `.mean()`\n",
-    "    - Sort the mean values in the descending order using `.sort_values()`\n",
-    "    - Get the top 10 terms using `.head()`\n",
+    "Aquí está el código base proporcionado para guiarte:\n",
+    "- Subconjunta el dataframe `tweets` según la etiqueta `airline_sentiment` y obtiene el índice de cada subconjunto (`.index`). Asigna el índice a  `positive_index` o `negative_index`.\n",
+    "- Para cada subconjunto:\n",
+    "    - Obtén la representación de tf-idf\n",
+    "    - Toma los valores promedio de tf-idf para el subconjunto usando `.mean()`\n",
+    "    - Ordena los valores promedio en orden descendente usando `.sort_values()`\n",
+    "    - Obtén los 10 principales términos usando `.head()`\n",
     "\n",
-    "Next, run `pos.plot` and `neg.plot` to plot the words with the highest mean tf-idf scores for each subset. "
+    "A continuación, ejecuta `pos.plot` y `neg.plot` para graficar las palabras con las puntuaciones promedio de tf-idf más altas para cada subconjunto. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2bfbf838-9ff6-48b8-ad5d-5e75304fe060",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'airline_sentiment' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Completa las máscaras booleanas \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m positive_index \u001b[38;5;241m=\u001b[39m tweets[\u001b[43mairline_sentiment\u001b[49m]\u001b[38;5;241m.\u001b[39mindex\n\u001b[1;32m      3\u001b[0m negative_index \u001b[38;5;241m=\u001b[39m tweets[airline_sentiment]\u001b[38;5;241m.\u001b[39mindex\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'airline_sentiment' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Complete the boolean masks \n",
-    "positive_index = tweets[...].index\n",
-    "negative_index = tweets[...].index"
+    "# Completa las máscaras booleanas \n",
+    "positive_index = tweets[airline_sentiment].index\n",
+    "negative_index = tweets[airline_sentiment].index"
    ]
   },
   {
@@ -3068,7 +3080,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complete the following two lines\n",
+    "# Aquí tienes las dos líneas completas:\n",
     "pos = tfidf.loc[...].mean().sort_values(...).head(...)\n",
     "neg = tfidf.loc[...].mean().sort_values(...).head(...)"
    ]
@@ -3104,7 +3116,7 @@
    "id": "77bca876-9649-46f3-bd4f-f9f68fea649a",
    "metadata": {},
    "source": [
-    "🔔 **Question**: How would you interpret these results? Share your thoughts in the chat!"
+    "🔔 **Pregunta**: ¿Cómo interpretarías estos resultados? ¡Comparte tus pensamientos en el chat!\n"
    ]
   },
   {
@@ -3114,23 +3126,23 @@
    "source": [
     "<a id='section5'></a>\n",
     "\n",
-    "## 🎬 **Demo**: Sentiment Classification Using the TF-IDF Representation\n",
+    "## 🎬 **Demostración**: Clasificación de Sentimiento Usando la Representación TF-IDF\n",
     "\n",
-    "Now that we have a tf-idf representation of the text, we are ready to do sentiment analysis!\n",
+    "Ahora que tenemos una representación tf-idf del texto, ¡estamos listos para hacer análisis de sentimiento!\n",
     "\n",
-    "In this demo, we will use a logistic regression model to perform the classification task. Here we briefly step through how logistic regression works as one of the supervised Machine Learning methods, but feel free to explore our workshop on [Python Machine Learning Fundamentals](https://github.com/dlab-berkeley/Python-Machine-Learning) if you want to learn more about it.\n",
+    "En esta demostración, utilizaremos un modelo de regresión logística para realizar la tarea de clasificación. Aquí hacemos una breve explicación de cómo funciona la regresión logística como uno de los métodos de Aprendizaje Automático supervisado, pero si deseas aprender más, siéntete libre de explorar nuestro taller sobre [Fundamentos de Aprendizaje Automático en Python.](https://github.com/dlab-berkeley/Python-Machine-Learning)\n",
     "\n",
-    "Logistic regression is a linear model, with which we use to predict the label of a tweet, based on a set of features ($x_1, x_2, x_3, ..., x_i$), as shown below:\n",
+    "La regresión logística es un modelo lineal, con el cual usamos para predecir la etiqueta de un tuit, basado en un conjunto de características ($x_1, x_2, x_3, ..., x_i$), como se muestra a continuación:\n",
     "\n",
     "$$\n",
     "L = \\beta_1 x_1 + \\beta_2 x_2 + \\cdots + \\beta_T x_T\n",
     "$$\n",
     "\n",
-    "The list of features we'll pass to the model is the vocabulary of the DTM. We also feed the model with a portion of the data, known as the training set, along with other model specification, to learn the coeffient ($\\beta_1, \\beta_2, \\beta_3, ..., \\beta_i$) of each feature. The coefficients tell us whether a feature contributes positively or negatively to the predicted value. The predicted value corresponds to adding all features (multiplied by their coefficients) up, and the predicted value gets passed to a [sigmoid function](https://en.wikipedia.org/wiki/Sigmoid_function) to be converted into the probability space, which tells us whether the predicted label is positive (when $p>0.5$) or negative (when $p<0.5$). \n",
+    "La lista de características que pasaremos al modelo es el vocabulario del DTM. También alimentamos el modelo con una porción de los datos, conocida como el conjunto de entrenamiento, junto con otras especificaciones del modelo, para aprender los coeficientes ($\\beta_1, \\beta_2, \\beta_3, ..., \\beta_i$) de cada característica. Los coeficientes nos indican si una característica contribuye de manera positiva o negativa al valor predicho. El valor predicho corresponde a la suma de todas las características (multiplicadas por sus coeficientes), y el valor predicho se pasa a una [ función sigmoide ](https://en.wikipedia.org/wiki/Sigmoid_function) para ser convertido al espacio de probabilidades, lo que nos indica si la etiqueta predicha es positiva (cuando $p>0.5$) o negativa (cuando $p<0.5$).\n",
     "\n",
-    "The remaining portion of the data, known as the test set, is used to test whether the learned coefficients could be generalized to unseen data. \n",
+    "La porción restante de los datos, conocida como el conjunto de prueba, se utiliza para comprobar si los coeficientes aprendidos pueden generalizarse a datos no vistos.\n",
     "\n",
-    "Now that we already have the tf-idf dataframe, the feature set is ready. Let's dive into model specification!"
+    "Ahora que ya tenemos el dataframe de tf-idf, el conjunto de características está listo. ¡Vamos a sumergirnos en la especificación del modelo!"
    ]
   },
   {
@@ -3149,17 +3161,17 @@
    "id": "ee87ff74-3fbb-472a-b795-6f4d18fab215",
    "metadata": {},
    "source": [
-    "We'll use the `train_test_split` function from `sklearn` to separate our data into two sets:"
+    "Usaremos la función `train_test_split` de `sklearn` para separar nuestros datos en dos conjuntos:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "64cec8b9-14d9-4897-9c02-cc89fcf7b3c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train-test split\n",
+    "# División de entrenamiento y prueba (Train-test split)\n",
     "X = tfidf\n",
     "y = tweets['airline_sentiment']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.15)"
@@ -3170,7 +3182,7 @@
    "id": "066771d8-2f31-4646-9a1b-6d2b1b9b208c",
    "metadata": {},
    "source": [
-    "The `fit_logistic_regression` function is written below to streamline the training process."
+    "La función `fit_logistic_regression` se escribe a continuación para agilizar el proceso de entrenamiento."
    ]
   },
   {
@@ -3197,23 +3209,23 @@
    "id": "124aa7ea-1bc1-43e2-beeb-0ba2da9b2df9",
    "metadata": {},
    "source": [
-    "We'll fit the model and compute the training and test accuracy."
+    "Ajustaremos el modelo y calcularemos la precisión en el entrenamiento y en la prueba."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "773963bd-6603-4fad-884b-09ce60afab18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fit the logistic regression model\n",
+    "# Ajustar el modelo de regresión logística\n",
     "model = fit_logistic_regression(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "e10d06c1-d884-45d4-a03d-dd5d40bf70aa",
    "metadata": {},
    "outputs": [
@@ -3227,7 +3239,7 @@
     }
    ],
    "source": [
-    "# Get the training and test accuracy\n",
+    "# Obtener la precisión en el entrenamiento y la prueba\n",
     "print(f\"Training accuracy: {model.score(X_train, y_train)}\")\n",
     "print(f\"Test accuracy: {model.score(X_test, y_test)}\")"
    ]
@@ -3237,7 +3249,7 @@
    "id": "d4e186c5-1719-4deb-bdb4-614a9980f058",
    "metadata": {},
    "source": [
-    "The model achieved ~94% accuracy on the training set and ~89% on the test set—that's pretty good! The model generalizes reasonably well to the test data."
+    "¡El modelo alcanzó una precisión de aproximadamente 94% en el conjunto de entrenamiento y 89% en el conjunto de prueba! ¡Eso es bastante bueno! El modelo se generaliza razonablemente bien a los datos de prueba."
    ]
   },
   {
@@ -3245,25 +3257,25 @@
    "id": "310dac39-4753-4ae8-8dfa-e65e5824cccb",
    "metadata": {},
    "source": [
-    "Next, let's also take a look at the fitted coefficients to see if what we see makes sense. \n",
+    "A continuación, echemos un vistazo a los coeficientes ajustados para ver si lo que observamos tiene sentido.\n",
     "\n",
-    "We can access them using `coef_`, and we can match each coefficient to the tokens from the vectorizer:"
+    "Podemos acceder a ellos usando  `coef_`, y podemos hacer coincidir cada coeficiente con los tokens del vectorizador:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "6dcb6ef1-13b3-437e-813c-7118911847a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get coefs of all features\n",
+    "# Obtén los coeficientes de todas las características.\n",
     "coefs = model.coef_.ravel()\n",
     "\n",
-    "# Get all tokens\n",
+    "# Obtén todos los tokens\n",
     "tokens = vectorizer.get_feature_names_out()\n",
     "\n",
-    "# Create a token-coef dataframe\n",
+    "# Crea un DataFrame de tokens y coeficientes.\n",
     "importance = pd.DataFrame()\n",
     "importance['token'] = tokens\n",
     "importance['coefs'] = coefs"
@@ -3271,7 +3283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "3e63814e-9c0d-4f7a-a5e0-72cca2758d71",
    "metadata": {},
    "outputs": [
@@ -3375,14 +3387,14 @@
     }
    ],
    "source": [
-    "# Get the top 10 tokens with lowest coefs\n",
+    "# Obtén los 10 principales tokens con los coeficientes más bajos.\n",
     "neg_coef = importance.sort_values('coefs').head(10)\n",
     "neg_coef"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "0d596bf7-753c-40cd-ac52-4a37163650ae",
    "metadata": {},
    "outputs": [
@@ -3486,7 +3498,7 @@
     }
    ],
    "source": [
-    "# Get the top 10 tokens with highest coefs\n",
+    "# Obtén los 10 principales tokens con los coeficientes más altos.\n",
     "pos_coef = importance.sort_values('coefs').tail(10)\n",
     "pos_coef "
    ]
@@ -3496,12 +3508,12 @@
    "id": "7b3b7893-caa0-4281-98f0-92c9e7b31953",
    "metadata": {},
    "source": [
-    "Let's plot the top 10 tokens with the highest/lowest coefficients. "
+    "Vamos a graficar los 10 principales tokens con los coeficientes más altos y más bajos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "17b1223b-e5c1-4992-bb7e-0a99651c3729",
    "metadata": {},
    "outputs": [
@@ -3517,7 +3529,7 @@
     }
    ],
    "source": [
-    "# Plot the top 10 tokens that have the highest coefs\n",
+    "# Graficar los 10 principales tokens que tienen los coeficientes más altos\n",
     "pos_coef.sort_values('coefs', ascending=False) \\\n",
     "        .plot(kind='barh', \n",
     "              xlim=(0, 18),\n",
@@ -3557,9 +3569,9 @@
    "id": "2eed48ea-fd35-4585-9b98-90456aaee447",
    "metadata": {},
    "source": [
-    "Words like \"ruin,\" \"rude,\" and \"hour\" are strong indicators of negative sentiment, while \"thank,\" \"awesome,\" and \"wonderful\" are associated with positive sentiment. \n",
+    "Palabras como \"ruin\" (arruinar), \"rude\" (grosero) y \"hour\" (hora) son fuertes indicadores de sentimiento negativo, mientras que \"thank\" (gracias), \"awesome\" (increíble) y \"wonderful\" (maravilloso) están asociadas con el sentimiento positivo.\n",
     "\n",
-    "We will wrap up Part 2 with these plots. These coefficient terms and the words with the highest TF-IDF values provide different perspectives on the sentiment of tweets. If you'd like, take some time to compare the two sets of plots and see which one provides a better account of the sentiments conveyed in tweets."
+    "Con estos gráficos, terminamos la Parte 2. Estos términos de coeficientes y las palabras con los valores más altos de TF-IDF proporcionan diferentes perspectivas sobre el sentimiento de los tuits. Si lo deseas, tómate un tiempo para comparar los dos conjuntos de gráficos y ver cuál proporciona una mejor explicación de los sentimientos expresados en los tuits."
    ]
   },
   {
@@ -3569,11 +3581,11 @@
    "source": [
     "<div class=\"alert alert-success\">\n",
     "\n",
-    "## ❗ Key Points\n",
+    "## ❗Puntos clave\n",
+    "* Una representación Bag-of-Words (Bolsa de Palabras) es un método simple para transformar nuestros datos de texto a números. Se enfoca en la frecuencia de las palabras, pero no en el orden de las palabras.\n",
+    "* Una representación TF-IDF es un paso más allá; también considera si una palabra aparece de manera distintiva en un documento o si ocurre de manera uniforme en todos los documentos.\n",
     "\n",
-    "* A Bag-of-Words representation is a simple method to transform our text data to numbers. It focuses on word frequency but not word order. \n",
-    "* A TF-IDF representation is a step further; it also considers if a certain word distinctively appears in one document or occurs uniformally across all documents. \n",
-    "* With a numerical representation, we can perform a range of text classification task, such as sentiment analysis. \n",
+    "* Con una representación numérica, podemos realizar una variedad de tareas de clasificación de texto, como el análisis de sentimientos. \n",
     "\n",
     "</div>"
    ]
