--- a/lessons/02_bag_of_words.ipynb
+++ b/lessons/02_bag_of_words.ipynb
@@ -2400,22 +2400,22 @@
    "source": [
     "<a id='section4'></a>\n",
     "\n",
-    "# Term Frequency-Inverse Document Frequency \n",
+    "# Frecuencia de término - Frecuencia Inversa de documento\n",
     "\n",
-    "So far, we're relying on word frequency to give us information about a document. This assumes if a word appears more often in a document, it's more informative. However, this may not always be the case. For example, we've already removed stop words because they are not informative, despite the fact that they appear many times in a document. We also know the word \"flight\" is among the most frequent words, but it is not that informative, because it appears in many documents. Since we're looking at airline tweets, we shouldn't be surprised to see the word \"flight\"!\n",
+    "Hasta ahora, estamos confiando en la frecuencia de las palabras para darnos información sobre documento. Esto suponque si una palabra aparece más a amenudo en un documento, tiene más información. Sin embargo, esto no siempre es ciero. Por ejemplo, hemos eliminado las palabras porque nos son informaticas, a pesar de que aparecen varias veces en el documento. También sabemos que la palabra \"flight\" esta entre las palabras mas frecuentes, pero no es tan informativa, porque aparece en muchos documentos. Dado que estamos analizando tweets de aerolíneas, no deberíamos sorprendernos de ver la palabra \"flight\".\n",
     "\n",
-    "To remedy this, we use a weighting scheme called **tf-idf (term frequency-inverse document frequency)**. The big idea behind tf-idf is to weight a word not just by its frequency within a document, but also by its frequency in one document relative to the remaining documents. So, when we construct the DTM, we will be assigning each term a **tf-idf score**. Specifically, term $t$ in document $d$ is assigned a tf-idf score as follows:\n",
+    "Para remediar esto, utilizamos un esquema de ponderación llamado tf-idf. La idea principal detrás de tf-idf es ponderar una palanra mo solo por su frecuencia dentro de un documento, sino también por su frencuencia en ese documento en relación con los demás docuemntos. Así que, cuando construimos la matriz de términos de documento, asignaremos a cada término una puntuación tf-idf. Específicamente, el término $t$ en el documento $d$ recibe una puntuación tf-idf de la siguiente forma:\n",
     "\n",
     "<img src='../images/tf-idf_finalized.png' alt=\"TF-IDF\" width=\"1200\">\n",
     "\n",
-    "In essence, the tf-idf score of a word in a document is the product of two components: **term frequency (tf)** and **inverse document frequency (idf)**. The idf acts as a scaling factor. If a word occurs in all documents, then idf equals 1. No scaling will happen. But idf is typically greater than 1, which is the weight we assign to the word to make the tf-idf score higher, so as to highlight that the word is informative. In practice, we add 1 to both the denominator and numerator (\"add-1 smooth\") to prevent any issues with zero occurrences.\n",
+    "En esencia, la puntuación tf-idf de una palabra en un documento es el producto de dos componentes: frecuencia de término (tf) y frecuencia inversa de documento (idf). El idf actúa como un factor de escala. Si una palabra ocurre en todos los documentos, entonces el idf será igual a 1. No se aplicará ningún ajuste. Pero el idf normalmente es mayor que 1, lo que es el peso que asignamos a la palabra para hacer que la puntuación tf-idf sea más alta, con el fin de resaltar que la palabra es informativa. En la práctica, añadimos 1 tanto al denominador como al numerador (\"suavizado add-1\") para evitar problemas con ocurrencias cero.\n",
     "\n",
-    "We can also create a tf-idf DTM using `sklearn`. We'll use a `TfidfVectorizer` this time:"
+    "También podemos crear una DTM tf-idf usando `sklearn`. Esta vez utilizaremos un `TfidfVectorizer`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 103,
    "id": "f5e32d8a-c42d-475f-aab4-21eca8b1aee8",
    "metadata": {},
    "outputs": [],
@@ -2425,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 104,
    "id": "d23916c1-5693-456c-b71d-6d9d78d1e2e4",
    "metadata": {},
    "outputs": [],
@@ -2440,18 +2440,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 105,
    "id": "7af5b342-ab18-4766-9561-e38e50cd1e9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<11541x3553 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 88287 stored elements in Compressed Sparse Row format>"
+       "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+       "\twith 87904 stored elements and shape (11541, 3571)>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 106,
    "id": "55e509c8-5402-4be0-9143-0e448fff7066",
    "metadata": {},
    "outputs": [
@@ -2635,7 +2635,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 3553 columns</p>\n",
+       "<p>5 rows × 3571 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2653,10 +2653,10 @@
        "3    0.0  0.0     0.0  0.0  0.0  0.0   0.0   0.0   0.0     0.0  \n",
        "4    0.0  0.0     0.0  0.0  0.0  0.0   0.0   0.0   0.0     0.0  \n",
        "\n",
-       "[5 rows x 3553 columns]"
+       "[5 rows x 3571 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2674,7 +2674,7 @@
    "id": "45ba13ea-c429-4ff1-a9a2-abf27c4d0888",
    "metadata": {},
    "source": [
-    "You may have noticed that the vocabulary size is the same as we saw in Challenge 2. This is because we used the same parameter setting when creating the vectorizer. But the values in the matrix are different—they are tf-idf scores instead of raw counts. "
+    "Puede que hayas notado que el tamaño del vocabulario es el mismo que vimos en el segundo reto. Esto se debe a que utilizamos la misma configuración de parámetros al crear el vectorizador. Sin embargo, los valores en la matriz son diferentes: ahora son puntuaciones tf-idf en lugar de simples conteos."
    ]
   },
   {
@@ -2682,7 +2682,7 @@
    "id": "fa58c360-5c55-4fa0-8c55-1f00e68baa9a",
    "metadata": {},
    "source": [
-    "## Interpret TF-IDF Values"
+    "## Interpretar los valores TF-IDF"
    ]
   },
   {
@@ -2690,12 +2690,12 @@
    "id": "bdad233d-ebc1-420f-9b67-c227c48f3e60",
    "metadata": {},
    "source": [
-    "Let's take a look the document where a term has the highest tf-idf values. We'll use the `.idxmax()` method to find the index."
+    "Echemos un vistazo al documento donde un término tiene los valores más altos de tf-idf. Usaremos el método `.idxmax()` para encontrar el índice."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 107,
    "id": "995b511a-d448-4cfb-a6a0-22a465efd8a8",
    "metadata": {},
    "outputs": [
@@ -2713,10 +2713,10 @@
        "zone           3177\n",
        "zoom           3920\n",
        "zurich        10622\n",
-       "Length: 3553, dtype: int64"
+       "Length: 3571, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2736,17 +2736,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 108,
    "id": "09b222fb-ad8c-4767-a974-dd261370a06e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "918"
+       "np.int64(918)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2760,12 +2760,12 @@
    "id": "955a48bc-dc93-481b-ba49-29876fc577fb",
    "metadata": {},
    "source": [
-    "Recall that this is the tweet where the word \"worst\" appears six times!"
+    "Recuerda que este es el tweet donde la palabra \"worst\" aparece seis veces."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 109,
    "id": "079ee0e0-476f-4236-ba8a-615ba7a0efe8",
    "metadata": {},
    "outputs": [
@@ -2775,7 +2775,7 @@
        "\"USER is the worst. worst reservation policies. worst costumer service. worst worst worst. congrats, USER you're not that bad!\""
       ]
      },
-     "execution_count": 51,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2789,22 +2789,22 @@
    "id": "9dd06bbc-e2fc-49e4-9354-efdaca5cfbd3",
    "metadata": {},
    "source": [
-    "How about \"cancel\"? Let's take a look at another example. "
+    "¿Qué tal \"cancel\"? Echemos un vistazo a otro ejemplo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 110,
    "id": "f809df1a-1178-4272-a415-42edb20173b2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5945"
+       "np.int64(5945)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2815,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 111,
    "id": "8093b6a7-54ca-468a-9376-b3c0be0b6f9b",
    "metadata": {},
    "outputs": [
@@ -2825,7 +2825,7 @@
        "'USER cancelled flighted 😢'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
