Revert "Emilio mayorga"

--- a/lessons/01_preprocessing.ipynb
+++ b/lessons/01_preprocessing.ipynb
@@ -34,11 +34,9 @@
     "### Sections\n",
     "1. [Preprocesamiento](#section1)\n",
     "\n",
-
     "En estas tres partes del trabajo, vamos aprender conceptos básicos para realizar análisis de tecto en python. Estas técnicas pertenecen al dominio del procesmiento de lenguaje natural (NLP). NlP es un camp enfocado a identificar y extraer patrones del lenguaje, principalmente en textos escritos. Durante el rabjo, interactuaremos con diversos paquetes para realizar análisis de texto, desde métodos simples de strings hasta paquetes específicos de NLP, como `nltk`, `spaCy` y otros modelos de lenguaje de gran escala como (`BERT`).\n",
     "\n",
     "Ahora bien, antes de iniciar, se debe instalar los siguientes paquetes:"
-
    ]
   },
   {
@@ -266,7 +264,6 @@
     "\n",
     "Al final del preprocesamiento, los datos seguirán estando en un formato legible. En la segunda y tercera parte, se empza´ra a convertir los datos de tecto en una representación numérica, un formato más adecuado para su precesamiento computacional.\n",
     "\n",
-
     "🔔 **Pregunta**: tomate un minuto para reflexionar con tus experiencias pasadas trabjando con datos de texto:\n",
     "- ¿Cuál es el formato de los datos de texto con los que has trabajado (texto plano, CSV, XML)?\n",
     "\n",
@@ -277,7 +274,6 @@
     "- ¿Los datos estaban desordenados o inconsistentes?\n",
     "\n",
     "Los datos estuvieron en algunos casos desordenados, en otros casos los datos inconsistentes pue slos descartabamos ya que necesitabamos avanzar rapidamente con el proyecto."
-
    ]
   },
   {
@@ -287,7 +283,6 @@
    "source": [
     "## Procesos Comunes\n",
     "\n",
-
     "El preprocesmiento no s epuede lograr con una sola linea de código. A menudo, nos familizarizamos con los datos para entender mejor el nivel de grnuralidad necesario para aplicar el preprocesamiento.\n",
     "\n",
     "Tipicamente, al inicio aplicamos un listado de procesos comunmente utilizados para la limpieza de datos. estas operaciones no alteran sustancialmente la forma ni el significado de los datos; solo sirven como un procesamiento estandarizado para reorganizar los datos en un formato consistente.\n",
@@ -301,7 +296,6 @@
     "Después del preocesamiento inicial, nosotros podemos seleccionar los preocesos específicos según la tarea, los detalles de estos procesos dependen de la tarea posterior que queremos llevar a cabo y el tipo de datos de texto (es decir, sus caracteríticas estilisticas y linguisticas).\n",
     "\n",
     "¡Antes de adentrarnos en estas operaciones, echemos un vistazo a nuestros datos!"
-
    ]
   },
   {
@@ -309,13 +303,11 @@
    "id": "ec5d7350-9a1e-4db9-b828-a87fe1676d8d",
    "metadata": {},
    "source": [
-
     "### Importar datos de texto\n",
     "\n",
     "trabajaremos con un archivo CSV. Este archivo contiene tweets sobre aerolíneas de EE.UU. recopilados en febrero de 2015\n",
     "\n",
     "Vamos a leer el archivo `airline_tweets.csv` dentro de un dataframe de `pandas`."
-
    ]
   },
   {
@@ -559,7 +551,6 @@
    "id": "ae3b339f-45cf-465d-931c-05f9096fd510",
    "metadata": {},
    "source": [
-
     "El dataframe tiene una fila por cada tweet. El texto del tweet se muestra en la columna text.\n",
     "- `text` (`str`): el texto del tweet.\n",
     "\n",
@@ -567,7 +558,6 @@
     "- `airline_sentiment` (`str`): el sentimiento del tweet, etiquetado como \"neutral\", \"positivo\" o \"negativo\".\n",
     "- `airline` (`str`): la aerolínea sobre la que se tuitea.\n",
     "- `retweet count` (`int`): la cantidad de veces que el tweet fue retuiteado."
-
    ]
   },
   {
@@ -605,12 +595,9 @@
    "id": "8adc05fa-ad30-4402-ab56-086bcb09a166",
    "metadata": {},
    "source": [
-
-
     "🔔 **Pregunta**: ¿Qué has notado? ¿Cuáles son las características estilísticas de los tweets?\n",
     "\n",
     "Los tweets son informales y son directos con respecto a los servicios de la aerolínea, a través de ello se puede identificar el sentimiento de los usuarios."
-
    ]
   },
   {
@@ -620,13 +607,11 @@
    "source": [
     "### Convertir a minúsculas\n",
     "\n",
-
-    "Aunque reconocemos que las mayúsculas aportan información, en muchos contextos no podemos utilizarla adecuadamente.\n",
+    "Mientras reconocemos que el uso de mayúsculas y minúsculas en una palabra resulta ser información, a menudo no trabajams en contextos donde podemos aprovechar adecuandamente esta infomación.\n",
     "\n",
-    "Frecuentemente, el análisis posterior que realizamos es insensible a mayúsculas y minúsculas. Por ejemplo, en un análisis de frecuencia, queremos considerar distintas formas de una misma palabra como equivalentes. Convertir el texto a minúsculas simplifica este proceso y facilita el análisis.\n",
+    "Mayormente, el análisis posterior que realizamos es insensible a las mayúsculas. Por ejemplo, en el análisis de frecuencia, nosotros usualmente queremos considerar varias formas de la misma palabra. Convertir los datos de texto a minúsculas facilita este proceso y smplifica nestro análisis.\n",
     "\n",
-    "Podemos lograr esto fácilmente con el método de cadena [`.lower()`](https://docs.python.org/3/library/stdtypes.html#str.lower); see [documentation](https://docs.python.org/3/library/stdtypes.html#string-methods) Para más funciones útiles, consulte la documentación.\n",
-
+    "Podemos lograr fácilmente la conversión a minúsculas con el método de cadena [`.lower()`](https://docs.python.org/3/library/stdtypes.html#str.lower); visitar [documentation](https://docs.python.org/3/library/stdtypes.html#string-methods) para ver más funciones útiles.\n",
     "\n",
     "Apliquémoslo al siguiente ejemplo:"
    ]
@@ -2411,7 +2396,6 @@
  ],
  "metadata": {
   "kernelspec": {
-
    "display_name": ".venv",
    "language": "python",
    "name": "python3"
